# semantic_compression

./: README.md
semantic-compression-main/: Makefile  README.md  pyproject.toml  pytest.ini  requirements-sam.txt  requirements.txt
semantic-compression-main/configs/: default.yaml
semantic-compression-main/scripts/: app.ps1  download_samples.py  setup.ps1  setup_sam.ps1
semantic-compression-main/src/: __init__.py
semantic-compression-main/src/app/: __init__.py  __main__.py  main_window.py  models.py  platform.py  service.py  widgets.py  worker.py
semantic-compression-main/src/compression/: __init__.py  classical.py  jpeg_utils.py  semantic.py
semantic-compression-main/src/evaluation/: __init__.py  metrics.py
semantic-compression-main/src/roi/: __init__.py  base.py  cache.py  class_priorities.py  factory.py  mask_utils.py  saliency.py  segmentation.py  u2net_saliency.py  u2net_setup.py  ultralytics_sam_roi.py  ultralytics_sam_setup.py
semantic-compression-main/src/utils/: config.py  file_lock.py  image_limits.py  io.py
semantic-compression-main/tests/: test_app_service.py  test_class_priorities.py  test_classical.py  test_io_save.py  test_mask_utils.py  test_metrics.py  test_platform.py  test_semantic.py  test_stats_display.py  test_ultralytics_sam.py
