[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-image-compression"
version = "0.2.0"
description = "Desktop app: semantic image compression with ROI (deep learning)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",
    "scikit-image>=0.21.0",
    "pyyaml>=6.0",
    "PyQt6>=6.5.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
sam = ["ultralytics>=8.3.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
